Solve label misalignment in forms with textfield prefixes

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -945,7 +945,7 @@ span.nanopub-assertion, span.nanopub-provenance, span.nanopub-pubinfo { padding:
 }
 
 .nanopub-statement a {
-  line-height: 30px;
+  line-height: 26px;
   vertical-align: top;
 }
 
